# xpublish-host

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: docker.yml  pypi.yml  tests.yml
reqs/: base.yml  dev.yml
tests/: test_config.py  test_plugins.py  utils.py
xpublish_host/: app.py  config.py  gunicorn.conf.py  metrics.py  plugins.py  utils.py
xpublish_host/examples/: datasets.py  ds_config.yaml  dynamic.yaml  example.env  example.yaml
xpublish_host/loaders/: dataset.py  mfdataset.py
xpublish_host/plugins/: __init__.py  data_points.py  dconfig.py
